few fixes on the use visible focus in list hook for menu support

--- a/src/hooks/useActiveDescendantListFocus/__stories__/useActiveDescendantListFocus.stories.mdx
+++ b/src/hooks/useActiveDescendantListFocus/__stories__/useActiveDescendantListFocus.stories.mdx
@@ -60,7 +60,8 @@ import styles from "./useActiveDescendantListFocus.module.scss"; import {
           itemsIds,
           onItemClick,
           isItemSelectable,
-          isHorizontalList: false
+          isHorizontalList: false,
+          isIgnoreSpaceAsItemSelection: true
       });
         return (
           <Flex direction={Flex.directions.COLUMN}>
