--- a/src/hooks/useActiveDescendantListFocus/__stories__/useActiveDescendantListFocus.stories.mdx
+++ b/src/hooks/useActiveDescendantListFocus/__stories__/useActiveDescendantListFocus.stories.mdx
@@ -128,7 +128,7 @@ import styles from "./useActiveDescendantListFocus.module.scss"; import {
             description="All the required props which should be defined inside the naturally focused element inside your component according to the accessibility standards"
         />
         <FunctionArgument
-            name="setVisualFocusId"
+            name="setVisualFocusItemId"
             type="(visualFocusItemId, isTriggeredByKeyboard) => {}"
             description="A function for controlling the visual focused item from outside."
         />
