--- a/src/storybook/stand-alone-documentaion/motion/motion.stories.mdx
+++ b/src/storybook/stand-alone-documentaion/motion/motion.stories.mdx
@@ -29,18 +29,17 @@ import { ComingSoon } from "../../components/coming-soon/coming-soon";
 
 ## Overview
 
-Animation is a powerful tool for communication and is an integral part of the visual language of a product. It helps to make the user interface easier to understand, navigate, intuitive to use and more interactive to work with. Here are the 4 main purposes that helps bridging between the virtual world we build and the physical world we know:
-
+Animation is a powerful tool for communication and is an integral part of the visual language of a product. It helps make the user interface easier to understand and navigate, intuitive to use, and more interactive to work with. Here are the four main processes that help bridge the gap between the virtual world we build and the physical world we know:
 <AnimationOverviews />
 
-## Implementation - duration and ease
+## Implementation - Duration and Ease
 
 ### Duration - how long a transition lasts
-
-Every move should feel fast and contribute to the feeling that our platform is fast, efficient and responsivene.
-When elements change their state or position, the duration of the animation should be slow enough to give users the possibility to notice the change, but at the same time quick enough not to cause waiting.
-
-The style and size of the motion determine the duration. There are two Styles, Productive motion and Expressive motion. The productive motion duration range is between 70 - 150 ms, while expressive motion scopes between 250 to 400 ms
+Every move should feel smooth and contribute to the feeling that our platform is responsive, efficient, and fast.
+When elements change their state or position, the duration of the animation should be slow enough to give users the chance to notice the change, but quick enough to not keep them waiting.
+<br/><br/>
+The style and size of the motion determine the duration. There are two styles; Productive motion and Expressive motion. The Productive motion duration range is between 70 - 150 ms, while Expressive motion scopes between 250 to 400 ms.
+<br/><br/><br/><br/>
 
 #### Productive motion
 
@@ -50,17 +49,17 @@ Use Productive motion for moments when the user needs to focus on completing tas
 
 #### Expressive motion
 
-Use expressive motion when the movement itself conveys a meaning that the user needs to be noticed.
+Use expressive motion when the movement itself is crucial in conveying the meaning of the action.
 
 <DurationExpressiveTokens />
 
-#### Summary: duration values
+#### Summary on duration
 
 <DurationTokenTable />
 
 ### Ease - acceleration over time
 
-Since linear movements appear unnatural to a human eye, they should never be linear. Objects should move with some acceleration or deceleration — just like all live objects in the physical world.
+Since linear movements appear unnatural to a human eye, objects should always move with some acceleration or deceleration — just like all live objects in the physical world.
 
 <ComponentRules
   rules={[
@@ -79,7 +78,7 @@ Since linear movements appear unnatural to a human eye, they should never be lin
 
 <EasingOverviews />
 
-#### Summary: easing values
+#### Summary on easing
 
 <EasingTokenTable />
 
@@ -87,8 +86,7 @@ Since linear movements appear unnatural to a human eye, they should never be lin
 
 ### Consistency
 
-Similar elements must have similar moves, Implement easing curves and timing with a consistent rhythm.
-Things should be predictable and familiar.
+Similar elements must have similar moves. Implement easing curves and timing with a consistent rhythm to ensure motion is predictable and familiar to the user.
 
 <ComponentRules
   rules={[
@@ -107,7 +105,7 @@ Things should be predictable and familiar.
 
 ### Simplicity
 
-Simple movements make it easier for the user to follow along and convey a clear message. Keep it simple and clever, removing gets in the way of users' understanding.
+Simple movements make it easier for the user to follow along and convey a clear message. Keep it simple and clever.
 
 <ComponentRules
   rules={[
@@ -126,7 +124,7 @@ Simple movements make it easier for the user to follow along and convey a clear 
 
 ### Don’t delay the user
 
-The user should never get the feeling that he’s waiting for the animation to end.
+The user should never get the feeling that they are waiting for the animation to end.
 
 <ComponentRules
   rules={[
