Enable brandFont prop for heading within editable heading. * Add brandFont prop * Edit storybook example

--- a/src/components/EditableHeading/__stories__/EditableHeading.stories.mdx
+++ b/src/components/EditableHeading/__stories__/EditableHeading.stories.mdx
@@ -58,7 +58,7 @@ An extension of Heading component, it allows built in editing capabilities
 
 <Canvas>
   <Story name="Types">
-    <EditableHeading type={EditableHeading.types.h1} value="H1 Header" />
+    <EditableHeading type={EditableHeading.types.h1} value="H1 Header" brandFont={true} />
     <EditableHeading type={EditableHeading.types.h2} value="H2 Header" />
     <EditableHeading type={EditableHeading.types.h3} value="H3 Header" />
     <EditableHeading type={EditableHeading.types.h4} value="H4 Header" />
