--- a/src/hooks/useActiveDescendantListFocus/__stories__/useActiveDescendantListFocus.stories.mdx
+++ b/src/hooks/useActiveDescendantListFocus/__stories__/useActiveDescendantListFocus.stories.mdx
@@ -51,9 +51,7 @@ import styles from "./useActiveDescendantListFocus.module.scss"; import {
       }, []);
       const {
           focusedElementProps,
-          visualFocusItemIndex,
           visualFocusItemId,
-          createOnItemClickCallback,
       } = useActiveDescendantListFocus({
           focusedElementRef,
           focusedElementRole: useActiveDescendantListFocus.roles.COMBOBOX,
@@ -68,21 +66,21 @@ import styles from "./useActiveDescendantListFocus.module.scss"; import {
               <Search ref={focusedElementRef} role={focusedElementProps.role} activeDescendant={focusedElementProps["aria-activedescendant"]}/>
               <ul>
                   <li
-                      onClick={createOnItemClickCallback(0)}
+                      onClick={onItemClick}
                       className={cx({[styles.visualFocus] : visualFocusItemId === "id-1"})}
                       id="id-1"
                       key="id-1">
                       Item 1
                   </li>
                   <li
-                      onClick={createOnItemClickCallback(1)}
+                      onClick={onItemClick}
                       className={cx({[styles.visualFocus] : visualFocusItemId === "id-2"})}
                       id="id-2"
                       key="id-2">
                       Item 2
                   </li>
                   <li
-                      onClick={createOnItemClickCallback(2)}
+                      onClick={onItemClick}
                       className={cx({[styles.visualFocus] : visualFocusItemId === "id-3"})}
                       id="id-3"
                       key="id-3">
@@ -130,7 +128,7 @@ import styles from "./useActiveDescendantListFocus.module.scss"; import {
         <FunctionArgument
             name="setVisualFocusItemId"
             type="(visualFocusItemId, isTriggeredByKeyboard) => {}"
-            description="A function for controlling the visual focused item from outside."
+            description="A function for controlling the visual focused item from outside (needed for cases such as exiting sub menu or dialog, when we want to return the focus to the last focused item."
         />
     </FunctionArgument>
 </FunctionArguments>
