remove aliases from storybook files

--- a/src/components/Avatar/__stories__/avatar.stories.mdx
+++ b/src/components/Avatar/__stories__/avatar.stories.mdx
@@ -15,7 +15,7 @@ import {
   Tip
 } from "../../../storybook/components";
 import Tooltip from "../../Tooltip/Tooltip";
-import { Counter, Flex } from "components";
+import { Counter, Flex } from "../..";
 import { femaleIcon, guest, home, maleIcon, minus, owner, person1, person2, person3 } from "./assets";
 import { useCallback, useState } from "react";
 import { StoryDescription } from "../../../storybook/components/story-description/story-description";
