--- a/src/components/Dropdown/__stories__/dropdown.stories.mdx
+++ b/src/components/Dropdown/__stories__/dropdown.stories.mdx
@@ -20,7 +20,7 @@ import { StoryDescription } from "../../../storybook/components/story-descriptio
 import {
   Attach,
   Email
-} from "components/Icon/Icons";
+} from "../../Icon/Icons";
 
 export const metaSettings = createStoryMetaSettings({
   component: Dropdown,
