--- a/src/components/List/__stories__/List.stories.mdx
+++ b/src/components/List/__stories__/List.stories.mdx
@@ -19,7 +19,8 @@ import { Icon } from "../../index";
 import DropdownChevronDown from "../../Icon/Icons/components/DropdownChevronDown";
 import DialogContentContainer from "../../DialogContentContainer/DialogContentContainer"; import {
     StoryDescription
-} from "../../../storybook/components/story-description/story-description"; import {Flex} from "components";
+} from "../../../storybook/components/story-description/story-description";
+import {Flex} from "../../";
 
 <Meta
   title="Navigation/List/List"
