--- a/src/components/Loader/__stories__/Loader.stories.mdx
+++ b/src/components/Loader/__stories__/Loader.stories.mdx
@@ -2,7 +2,7 @@ import Loader from "../Loader";
 import { ArgsTable, Canvas, Meta, Story } from "@storybook/addon-docs";
 import { createComponentTemplate } from "../../../storybook/functions/create-component-story";
 import { StoryDescription } from "../../../storybook/components/story-description/story-description";
-import { Button, DialogContentContainer, Flex, Search } from "components";
+import { Button, DialogContentContainer, Flex, Search } from "../..";
 import { ComponentRules, RelatedComponents, Tip, UsageGuidelines } from "../../../storybook";
 import { Link } from "../../../storybook/components";
 import { useCallback, useState } from "react";
