--- a/src/components/Tooltip/__stories__/tooltip.stories.mdx
+++ b/src/components/Tooltip/__stories__/tooltip.stories.mdx
@@ -8,7 +8,7 @@ import Button from "../../Button/Button";
 import { modifiers } from "./helper";
 import { Link } from "../../../storybook/components";
 import { CHIP, LABEL, TIPSEEN } from "../../../storybook/components/related-components/component-description-map";
-import { TOOLTIP_THEMES } from "components/Tooltip/TooltipConstants";
+import { TOOLTIP_THEMES } from "../TooltipConstants";
 import "./tooltip.stories.scss";
 
 <Meta title="Popover/Tooltip" component={Tooltip} />
