--- a/src/hooks/usePrevious/__stories__/usePrevious.stories.mdx
+++ b/src/hooks/usePrevious/__stories__/usePrevious.stories.mdx
@@ -1,9 +1,7 @@
 import { useState } from "react";
 import { Story, Canvas, Meta } from "@storybook/addon-docs";
 import usePrevious from "../index";
-import Button from "components/Button/Button";
-import { Counter } from "components";
-import Flex from "components/Flex/Flex";
+import {Button, Counter, Flex} from "../../../components";
 import { FunctionArgument, FunctionArguments } from "../../../storybook";
 import styles from "./usePrevious.stories.module.scss";
 
