--- a/src/hooks/useSetFocus/__stories__/useSetFocus.stories.mdx
+++ b/src/hooks/useSetFocus/__stories__/useSetFocus.stories.mdx
@@ -1,9 +1,7 @@
 import { Story, Canvas, Meta } from "@storybook/addon-docs";
 import { useRef } from "react";
-import Button from "components/Button/Button";
-import Flex from "components/Flex/Flex";
+import {Button, Flex, InputField} from "../../../components";
 import useSetFocus from "../../useSetFocus/index";
-import { InputField } from "components";
 import { FunctionArgument, FunctionArguments } from "../../../storybook";
 import styles from "./useSetFocus.stories.module.scss";
 
