--- a/src/hooks/useActiveDescendantListFocus/__stories__/useActiveDescendantListFocus.stories.mdx
+++ b/src/hooks/useActiveDescendantListFocus/__stories__/useActiveDescendantListFocus.stories.mdx
@@ -1,6 +1,6 @@
 import { useRef, useCallback } from "react"
 import cx from "classnames";
-import {Flex, Search} from "components";
+import {Flex, Search} from "../../../components";
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
 import useActiveDescendantListFocus from "../index";
 import UseActiveDescendantListFocus from "./hooksDummyComponents/UseActiveDescendantListFocus";
@@ -8,9 +8,10 @@ import {
     FunctionArgument, FunctionArguments,
     UnstyledList, UnstyledListItem
 } from "../../../storybook";
-import styles from "./useActiveDescendantListFocus.module.scss"; import {
+import styles from "./useActiveDescendantListFocus.module.scss";
+import {
     overviewInteractionSuite
-} from "hooks/useActiveDescendantListFocus/__tests__/useActiveDescendantListFocus.interactions";
+} from "../__tests__/useActiveDescendantListFocus.interactions";
 
 <Meta
   title="Hooks/use Active Descendant List Focus"
