fix enums display on ts components and js components

--- a/src/components/IconButton/__stories__/IconButton.stories.mdx
+++ b/src/components/IconButton/__stories__/IconButton.stories.mdx
@@ -29,7 +29,7 @@ import Avatar from "../../Avatar/Avatar";
 
 export const metaSettings = createStoryMetaSettings({
   component: IconButton,
-  enumPropNamesArray: ["kind", "size"],
+  enumPropNamesArray: ["kind", "size", "color"],
   iconPropNamesArray: ["icon"],
   actionPropsArray: ["onClick"]
 });
