--- a/src/components/Button/__stories__/button.stories.mdx
+++ b/src/components/Button/__stories__/button.stories.mdx
@@ -1,16 +1,17 @@
 import { useState, useCallback } from "react";
 import Button from "../Button";
-import { createComponentTemplate, createStoryMetaSettings } from "../../../storybook/functions/create-component-story";
+import { createComponentTemplate, createStoryMetaSettings } from "../../../storybook";
 import { ArgsTable, Story, Canvas, Meta } from "@storybook/addon-docs";
 import { Calendar, Remove, Add, Check } from "../../Icon/Icons";
 import { BUTTON_GROUP, SPLIT_BUTTON, CHIP } from "../../../storybook/components/related-components/component-description-map";
-import { MultipleStoryElementsWrapper, Link } from "../../../storybook/components";
+import { MultipleStoryElementsWrapper, Link } from "../../../storybook";
 import "./button.stories.scss";
 
 export const metaSettings = createStoryMetaSettings({
-  component: Button,
-  iconPropNamesArray: ["leftIcon", "rightIcon", "successIcon"],
-  actionPropsArray: ["onClick"],
+    component: Button,
+    enumPropNamesArray: ["kind", "size", "color", "type"],
+    iconPropNamesArray: ["leftIcon", "rightIcon", "successIcon"],
+    actionPropsArray: ["onClick"],
 })
 
 <Meta
@@ -49,7 +50,7 @@ or performing a delete operation.
 </Canvas>
 
 ## Props
-<ArgsTable of={Button} />
+<ArgsTable story="Overview" />
 
 ## Usage
 <UsageGuidelines guidelines={[
