--- a/src/components/Combobox/__stories__/combobox.stories.mdx
+++ b/src/components/Combobox/__stories__/combobox.stories.mdx
@@ -51,6 +51,8 @@ Combo box allowing users to filter longer lists to only the selections matching 
   <Story
     name="Overview"
     args={{
+        defaultVisualFocusFirstIndex: true,
+        autoFocus: true,
       options: [
         { id: "1", label: "Option 1" },
         { id: "2", label: "Option 2" },
