--- a/src/hooks/useVibeMediaQuery/__stories__/useVibeMediaQuery.stories.mdx
+++ b/src/hooks/useVibeMediaQuery/__stories__/useVibeMediaQuery.stories.mdx
@@ -1,7 +1,7 @@
-import { Story, Canvas, Meta } from "@storybook/addon-docs";
+import { Canvas, Meta, Story } from "@storybook/addon-docs";
 import useVibeMediaQuery from "..";
 import "../../__stories__/general-hooks-stories.scss";
-import styles from "./useVibeMediaQuery.modules.scss";
+import styles from "./useVibeMediaQuery.module.scss";
 
 <Meta title="Hooks/useVibeMediaQuery" />
 
