Add missing prop bind: marginBottom in Box story

--- a/src/components/Box/__stories__/Box.stories.mdx
+++ b/src/components/Box/__stories__/Box.stories.mdx
@@ -26,6 +26,7 @@ export const metaSettings = createStoryMetaSettings({
     "marginY",
     "marginTop",
     "marginEnd",
+    "marginBottom",
     "marginStart",
     "padding",
     "paddingX",
@@ -84,7 +85,11 @@ atom based compositions, it can accept all Vibe style related props and have a s
 ## Usage
 
 <UsageGuidelines
-  guidelines={["Use as a styled container", "Use to add spacing, borders, and rounded corners to areas of content", "Use as an inner component for spacing or styles"]}
+  guidelines={[
+    "Use as a styled container",
+    "Use to add spacing, borders, and rounded corners to areas of content",
+    "Use as an inner component for spacing or styles"
+  ]}
 />
 
 <Tip title="Benefits of the Box component">Easily add Vibe styles without adding css</Tip>
